<resources>
    <string name="brand">Vital</string>
    <string name="nav_home">Home</string>
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_profile">Profile</string>
    <string name="header_login">Log In</string>
    <string name="header_register">Register</string>
    <string name="header_profile">Profile</string>
    <string name="header_hi_user">Hi Jess, 👋</string>
    <string name="header_hi_user_description">Ready to trace your vitality today?</string>
    <string name="header_dashboard">Dashboard</string>
    <string name="header_search_results">Search Results</string>
    <string name="header_get_inspired">Get Inspired 🌟</string>
    <string name="first_name">First Name</string>
    <string name="last_name">First Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="EmailPlaceholder">jess@vital.com</string>
    <string name="passwordPlaceholder">Enter Password</string>
    <string name="searchPlaceholder">Search any food</string>
    <string name="get_nutrients_by_fdcid">Get Nutrients By FDCID</string>
    <string name="get_fdc_id">GET FDC ID</string>
    <string name="food_entries">Food Entries</string>
    <string name="shake_your_phone">Shake your phone,</string>
    <string name="get_healthy_meal_ideas">Get healthy meal ideas!</string>
</resources>