<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/navbar"
  app:startDestination="@id/searchFragment">

  <fragment
    android:id="@+id/searchFragment"
    android:name="com.numad21fa.vital.HomeSearchFragment"
    android:label="@string/nav_home"
    tools:layout="@layout/fragment_search" />
  <fragment
    android:id="@+id/dashboardFragment"
    android:name="com.numad21fa.vital.DashboardFragment"
    android:label="@string/nav_dashboard"
    tools:layout="@layout/fragment_dashboard" />
  <fragment
    android:id="@+id/profileFragment"
    android:name="com.numad21fa.vital.ProfileFragment"
    android:label="@string/nav_profile"
    tools:layout="@layout/fragment_profile" />

</navigation>