<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".webservice.FDCWebServiceActivity">

    <Button
        android:id="@+id/btn_getFDCID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:onClick="onClick"
        android:text="@string/get_fdc_id"
        app:layout_constraintEnd_toStartOf="@+id/btn_getNutrientsByFDCID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_getNutrientsByFDCID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_nutrients_by_fdcid"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_getFDCID"
        app:layout_constraintTop_toTopOf="@+id/btn_getFDCID" />

    <EditText
        android:id="@+id/editText_dataInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/food_entries"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_getFDCID" />

    <ListView
        android:id="@+id/list_view_FDC_results"
        android:layout_width="391dp"
        android:layout_height="646dp"
        android:layout_marginTop="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_dataInput" />


</androidx.constraintlayout.widget.ConstraintLayout>