<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_marginTop="25dp"
  android:layout_marginBottom="25dp"
  android:layout_marginStart="25dp"
  android:layout_marginEnd="25dp"
  app:layout_constraintCircleRadius="15dp"
  tools:context=".LoginActivity">

  <TextView
    android:id="@+id/brand"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/brand"
    android:textFontWeight="700"
    android:textSize="30sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/header"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="35dp"
    android:text="@string/header_login"
    android:textFontWeight="500"
    android:textSize="26sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/brand" />

  <EditText
    android:id="@+id/editEmail"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginTop="30dp"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:autofillHints="@string/EmailPlaceholder"
    android:background="@drawable/input_style"
    android:ems="10"
    android:hint="@string/EmailPlaceholder"
    android:inputType="textEmailAddress"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/header" />

  <EditText
    android:id="@+id/editPassword"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginTop="24dp"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:autofillHints="@string/passwordPlaceholder"
    android:background="@drawable/input_style"
    android:ems="10"
    android:hint="@string/passwordPlaceholder"
    android:inputType="textPassword"
    android:textSize="18sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/editEmail" />

  <Button
    android:id="@+id/btn_login"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/header_login"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editPassword"
    android:background="@drawable/default_outlined_button_style"
    android:textColor="@color/white"/>

  <Button
    android:id="@+id/btn_exit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Exit"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/btn_login"
    android:backgroundTint="@color/white"
    android:textColor="@color/primary"/>

</androidx.constraintlayout.widget.ConstraintLayout>